Fixing dark mode color.

--- a/assets/dev/scss/direction/editor-dark-mode.scss
+++ b/assets/dev/scss/direction/editor-dark-mode.scss
@@ -424,6 +424,7 @@ $devices: 'desktop', 'tablet', 'mobile';
 
 		&,
 		&__controls {
+			background-color: $theme-dark-gray-darkest;
 			border-color: $theme-dark-gray-light;
 		}
 	}
